--- a/doc/dokumentaatio.tex
+++ b/doc/dokumentaatio.tex
@@ -3,9 +3,10 @@
 \usepackage[finnish]{babel}
 \usepackage{graphicx}
 \title{Aineopintojen harjoitustyö: Tietokantasovellus\\Dokumentaatio}
-\author{Sandra Luhtaniemi\\013734363}
+\author{Sandra Luhtaniemi}
 \begin{document}
 \maketitle
+\section{Johdanto}
 Harjoitustyön aiheena on lankatietokanta. Tietokannan tarkoitus on tarjota käyttäjälleen väline, jolla pitää kirjaa omistamistaan eri käsityölangoista, näiden materiaalista, paksuudesta ja määrästä. Käyttäjä voi esimerkiksi kohdatessaan kiinnostavan neuleohjeen, hakea ohjeessa mainitun langan ominaisuuksien perusteella tietokannasta ne langat, joilla työ olisi mahdollista toteuttaa, sekä tarkistaa, onko hänellä sitä riittävä määrä. Käyttäjä voi myös muilla perusteilla etsiä tietokannasta lankoja, esimerkiksi vaikkapa kaikki sukkalangat. Käyttäjä voi lisätä tietokantaan uudet lankahankintansa, poistaa langan, tai päivittää sen määrän käytettyään jotakin lankaa. Järjestelmän tavoitteena on helpottaa käsitöiden suunnittelua ja vähentää turhia lankahankintoja.
 \\ \ \\
 Järjestelmä käyttää PostgreSQL-tietokantaa, se toteutetaan php-ohjelmointikielellä, ja se pyörii Tietojenkäsittelytieteen laitoksen users-palvelimella Apache-palvelimen alla. 
@@ -38,4 +39,7 @@ Omien tietojen muuttaminen: Käyttäjä muuttaa omia tietojaan, esimerkiksi sala
 \includegraphics[scale=0.5]{kayttotapaukset.png}
 \caption{Käyttötapauskaavio}
 \end{figure}
+
+\section{Käyttöliittymän suunnittelu}
+
 \end{document}
