--- a/doc/dokumentaatio.tex
+++ b/doc/dokumentaatio.tex
@@ -112,5 +112,8 @@ Tietokanta löytyy osoitteesta \href{http://aluhtani.users.cs.helsinki.fi/tsoha/
 \\
 Kirjautumista ja toimintoja voi kokeilla käyttäjätunnuksella ja salasanalla: ``Anneli'' ja "asdf''.
 \section{Järjestelmän yleisrakenne}
-Tietokantasovellusta tehdessä on noudatettu MVC-mallia. Kontrollerit ovat juurikansiossa. Näkymät ja malliluokat ovat kansioissa views ja lib. 
+Tietokantasovellusta tehdessä on noudatettu MVC-mallia. Kontrollerit ovat juurikansiossa. Näkymät ja malliluokat ovat kansioissa views ja lib. Apukirjastot löytyvät myös kansiosta lib. Asetukset ovat tiedostossa settings.php. Ylläpidon sivuista vastaavissa tiedostoissa on admin-etuliite. Kaikki tiedostonimet on kirjoitettu pienellä. 
+\section{Järjestelmän komponentit}
+
+
 \end{document}
