--- a/doc/dokumentaatio.tex
+++ b/doc/dokumentaatio.tex
@@ -107,6 +107,8 @@ amount & kokonaisluku & Kayttajan omistama määrä kyseistä lankaa\\
 \end{tabular}
 \\
 Tietokanta voi sisältää monia eri lankoja, mutta käyttäjällä ei välttämättä ole näitä kaikkia tai eri käyttäjillä on lankoja eri määrä. 
+\section{Asennusohje}
+Tiedostot kopioidaan paikkaan, missä niitä halutaan säilyttää. Tiedostoon lib/settings.php laitetaan asetukset, jolla voidaan muodostaa yhteys tietokantaan. Tietokantaan luodaan taulut ajamalla tiedosto sql/create_tables.sql ja käyttäjä ajamalla tiedosto sql/init_admin.sql. 
 \section{Käynnistys- ja käyttöohje}
 Tietokanta löytyy osoitteesta \href{http://aluhtani.users.cs.helsinki.fi/tsoha/login.php}{http://aluhtani.users.cs.helsinki.fi/tsoha/login.php}
 \\
